10/06/2004
----------
1. Austria holiday file
   (thanks to gottfried hufnagel, gottfried.hufnagel.AT.onb.ac.at)


10/04/2004
----------
1. Hellenic/Greek language file minor update
   Cool3D.Hellenic iconse update
   (thanks to Dimitris Michelinakis, dimitris.AT.michelinakis.gr)
2. misc/tools/mkcool3d/mkcool3d.sh update
   (thanks to Dimitris Michelinakis, dimitris.AT.michelinakis.gr)


09/26/2004 (version 2.41)
----------
1. French language and templates translation update
   (thanks to Nabil SEFRIOUI, admin.AT.osmium-work.com)


09/24/2004
----------
1. fix a bug in addressbook csv export routine which didn't check if the 
   exported fields contain commas, so the resulting csv may be misunderstood
   by other programs. 
   (thanks to Joao S Veiga, openwebmail.AT.rf.com.br for his fix)
2. fix bugs in pine addressbook import routine
   a. entries across multiple lines were not parsed properly
   b. mime encoded strings were not decoded properly
   (reported by zlb.AT.lsec.cc.ac.cn)
3. fix a bug in maildb.pl which didn't reset message type variable between 
   loop and caused openwebmail to have wrong message size/count for folders
   in some cases.

ps: This wrong size/count summary bug won't hurt the consistence of mail 
    folder and related index, but we suggest that sites running imapd/pop3d 
    and openwebmail later than 20040804 should upgrade to this release.


09/22/2004
----------
1. Deutsch template files translation update
   (thanks to Martin Bronk, martin.AT.bronk.de)


09/14/2004
----------
1. use title="..." directive instead of href="mailto:..." for email links 
   in all html documents


09/12/2004
----------
1. fix a bug that en.utf8 did't exist in 
   data/openwebmail/javascript/htmlarea.openwebmail/popups
   which caused html editing not working for en.utf8 


09/11/2004
----------
1. fix a bug that mini search icon won't display correctly in preference
   configuration if iconset is text based