@@ -17,7 +17,7 @@
 
 name			Open WebMail
 version			2.41
-releasedate		20041006
+releasedate		20041014
 
 ##############################################################################
 # host dependent configuration
