@@ -242,6 +242,13 @@ Please use mirror sites near you to avoid overload on official sites!
   <td><a href="#email" title="mirrors.AT.generalwebhosting.com">Tino Donderwinkel</a></td>
   </tr>
 
+  <tr>
+  <td>21</td>
+  <td><a href="http://openwebmail.nigilist.ru/">http://openwebmail.nigilist.ru/</a></td>
+  <td>Moscow, Russia</td>
+  <td><a href="#email" title="nit.AT.nigilist.ru">Petya Kohts</a></td>
+  </tr>
+
   </table>
   </p>
 </blockquote>
